Added "magic_Reawakening.html, murder_train.html, soulcaster.html"

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                                 Projects
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Murder Train</a>
-                                <a class="dropdown-item" href="#">Magic Reawakening</a>
-								<a class="dropdown-item" href="#">Soulcaster</a>
+                                <a class="dropdown-item" href="murder_train.html">Murder Train</a>
+                                <a class="dropdown-item" href="magic_Reawakening.html">Magic Reawakening</a>
+								<a class="dropdown-item" href="soulcaster.html">Soulcaster</a>
                             </div>
                         
                     </ul>
