Added a discription to about.html, and made a couple of visual changes

--- a/about.html
+++ b/about.html
@@ -15,7 +15,6 @@
             <h1>Paul Huffman </h1>
 
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">Navbar</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -47,7 +46,17 @@
                     </form>
                 </div>
             </nav>
-        
+            <h2>About</h2>
+            <p>Hello, my name is Paul Huffman.</p>
+            <p>
+                I am currently a sophomore at Northern Kentucky University where I am studying Computer Science. While at NKU I have primarily 
+                been focussed on Java development. I am also minoring in Data Science.
+            </p>
+            <p>
+                Before coming to Northern Kentucky University I spent 3 years studying Real-time Interactive Simulation at DigiPen Institute of
+                Technology in Redmond, Washington. While at DigiPen I completed 3 team based projects where I along with a team of other students 
+                had to make a video game from scratch. More about these projects is in the projects tab, I hope you take a look.
+            </p>
 
         <!-- jQuery, Popper.js, and Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
