--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@
                     </ul>
                 </div>
             </nav>
+            <div class="text-center">
             <h2>About</h2>
             <p>Hello, my name is Paul Huffman.</p>
             <p>
@@ -53,6 +54,9 @@
                 Technology in Redmond, Washington. While at DigiPen I completed 3 team based projects where I along with a team of other students 
                 had to make a video game from scratch. More about these projects is in the projects tab, I hope you take a look.
             </p>
+
+            <a class="btn btn-secondary" href="https://www.dropbox.com/sh/sgdae4knt5mfaib/AAAUClgFP62Z7LUC6RzH1TEja?dl=0" role="button">My Resume</a>
+            </div>
 
         <!-- jQuery, Popper.js, and Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
