--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-		<link rel="stylesheet" href="styles.css">
+        <link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
+        <link rel="stylesheet" href="styles.css">
         <title>About Paul Huffman</title>
     </head>
     <body>
@@ -27,6 +28,9 @@
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Resume.html">Resume</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -54,8 +58,6 @@
                 Technology in Redmond, Washington. While at DigiPen I completed 3 team based projects where I along with a team of other students 
                 had to make a video game from scratch. More about these projects is in the projects tab, I hope you take a look.
             </p>
-
-            <a class="btn btn-secondary" href="https://www.dropbox.com/sh/sgdae4knt5mfaib/AAAUClgFP62Z7LUC6RzH1TEja?dl=0" role="button">My Resume</a>
             </div>
 
         <!-- jQuery, Popper.js, and Bootstrap JS -->
