--- a/Resume.html
+++ b/Resume.html
@@ -13,19 +13,15 @@
     </head>
     <body>
         <div class="container">
-            <h1>Paul Huffman </h1>
 
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-            
+                <a class="navbar-brand" href="index.html">Paul Huffman</a>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item ">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
                         </li>
@@ -50,7 +46,7 @@
             
             <div class="text-center">
                 <h2>
-                <div class="gallery">
+                <div class="gallery resume">
                   <a target="_blank" href="Paul_Huffman_Resume.pdf">
                     <img src="images/Resume.png" alt="Resume" width="600" height="400">
                   </a>
