--- a/Resume.html
+++ b/Resume.html
@@ -45,8 +45,8 @@
 
             
             <div class="text-center">
-                <h2>
-                <div class="gallery resume">
+                <h2>Resume</h2>
+                <div class="resume">
                   <a target="_blank" href="Paul_Huffman_Resume.pdf">
                     <img src="images/Resume.png" alt="Resume" width="600" height="400">
                   </a>
