--- a/about.html
+++ b/about.html
@@ -43,7 +43,10 @@
                 </div>
             </nav>
             <div class="text-center">
-            <h2>About</h2>
+            <h2>About Me</h2>
+            <div class="portrate">
+                <img src="images/Portrate2_2.jpg" alt="Portrate" width="600" height="400">
+              </div>
             <p>Hello, my name is Paul Huffman.</p>
             <p>
                 I am currently a sophomore at Northern Kentucky University where I am studying Computer Science. While at NKU I have primarily 
@@ -51,8 +54,9 @@
             </p>
             <p>
                 Before coming to Northern Kentucky University I spent 3 years studying Real-time Interactive Simulation at DigiPen Institute of
-                Technology in Redmond, Washington. While at DigiPen I completed 3 team based projects where I worked with a team of other 
-                students to make a video game from scratch. More about these projects is in the projects tab, I hope you take a look.
+                Technology in Redmond, Washington. While at DigiPen I learned a lot about the world of software development, and I even 
+                completed 3 team based projects where I worked with a team of other students to make a video game from scratch. More 
+                about these projects is in the projects tab, I hope you take a look.
             </p>
             
             <div class= lists>
